--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "dev": "next dev",
     "build": "next build --no-lint ",
     "start": "next start",
-    "lint": "next lint",
-    "migration:generate": "drizzle-kit generate:pg",
-    "migration:push": "drizzle-kit push:pg"
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.6.2",
     "@hookform/resolvers": "^3.3.4",
-    "@neondatabase/serverless": "^0.7.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -47,11 +44,11 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "dotenv": "^16.4.1",
-    "drizzle-orm": "^0.29.3",
     "fs-extra": "^11.3.0",
     "fs.extra": "^1.3.2",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.540.0",
+    "mongodb": "^6.19.0",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -80,7 +77,6 @@
     "@types/node": "^20",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "drizzle-kit": "^0.20.14",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
