--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^0.6.2",
+    "@auth/drizzle-adapter": "^1.10.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -35,7 +35,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.5",
-    "@react-email/components": "^0.0.34",
+    "@react-email/components": "^0.5.3",
     "@tanstack/react-table": "^8.21.2",
     "@types/nodemailer": "^6.4.17",
     "archiver": "^7.0.1",
@@ -48,8 +48,9 @@
     "fs.extra": "^1.3.2",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.540.0",
+    "mkdirp": "^3.0.1",
     "mongodb": "^6.19.0",
-    "next": "15.1.3",
+    "next": "^15.5.2",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
@@ -62,6 +63,7 @@
     "react-icons": "^5.4.0",
     "react-pick-color": "^2.0.0",
     "recharts": "^2.15.3",
+    "rimraf": "^6.0.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
